Match flyover mobile toast to centered style

--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
             </div>
         </div>
 
-        <div id="fo-toast" style="display:none;position:absolute;bottom:90px;left:50%;transform:translateX(-50%);z-index:20;background:rgba(0,0,0,0.7);color:rgba(255,255,255,0.85);padding:8px 18px;border-radius:16px;font-size:0.8rem;font-family:'EB Garamond',Georgia,serif;backdrop-filter:blur(8px);opacity:0;transition:opacity 0.5s;pointer-events:none;white-space:nowrap">3D terrain disabled on mobile</div>
+        <div id="fo-toast" style="display:none;position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);z-index:20;background:rgba(0,0,0,0.8);color:rgba(255,255,255,0.95);padding:24px 32px;border-radius:12px;font-size:1rem;font-family:'EB Garamond',Georgia,serif;font-style:italic;backdrop-filter:blur(8px);opacity:0;transition:opacity 0.5s;pointer-events:none;text-align:center;max-width:85vw;line-height:1.6">3D terrain disabled on mobile</div>
 
         <canvas id="fo-minimap" width="240" height="360" style="display:none"></canvas>
 
